--- a/src/common.blocks/modal.scss
+++ b/src/common.blocks/modal.scss
@@ -4,7 +4,7 @@
 .modal {
   @include mixins.sublayer;
   // height: max-content;
-  position: absolute;
+  position: fixed;
   display: none;
   justify-content: center;
   background-color: $overlayBackground;
@@ -15,6 +15,7 @@
 
   &_active {
     display: flex;
+    overflow-y: auto;
   }
 
   &__container {
